--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -114,7 +114,7 @@
           position: relative;
           display: inline-block;
           padding: 10px 20px;
-          color: #E2A6FF;
+          color: #5a5aff;
           font-size: 16px;
           text-decoration: none;
           text-transform: uppercase;
@@ -125,13 +125,13 @@
         }
 
         .login-box a:hover {
-          background: #E2A6FF;
+          background: #5a5aff;
           color: #fff;
           border-radius: 5px;
-          box-shadow: 0 0 5px #E2A6FF,
-                      0 0 25px #E2A6FF,
-                      0 0 50px #E2A6FF,
-                      0 0 100px #E2A6FF;
+          box-shadow: 0 0 5px #5a5aff,
+                      0 0 25px #5a5aff,
+                      0 0 50px #5a5aff,
+                      0 0 100px #5a5aff;
         }
 
         .login-box a span {
@@ -144,7 +144,7 @@
           left: -100%;
           width: 100%;
           height: 2px;
-          background: linear-gradient(90deg, transparent, #E2A6FF);
+          background: linear-gradient(90deg, transparent, #5a5aff);
           animation: btn-anim1 1s linear infinite;
         }
 
@@ -162,7 +162,7 @@
           right: 0;
           width: 2px;
           height: 100%;
-          background: linear-gradient(180deg, transparent, #E2A6FF);
+          background: linear-gradient(180deg, transparent, #5a5aff);
           animation: btn-anim2 1s linear infinite;
           animation-delay: .25s
         }
@@ -181,7 +181,7 @@
           right: -100%;
           width: 100%;
           height: 2px;
-          background: linear-gradient(270deg, transparent, #E2A6FF);
+          background: linear-gradient(270deg, transparent, #5a5aff);
           animation: btn-anim3 1s linear infinite;
           animation-delay: .5s
         }
@@ -200,7 +200,7 @@
           left: 0;
           width: 2px;
           height: 100%;
-          background: linear-gradient(360deg, transparent, #E2A6FF);
+          background: linear-gradient(360deg, transparent, #5a5aff);
           animation: btn-anim4 1s linear infinite;
           animation-delay: .75s
         }
@@ -225,9 +225,9 @@
         
         @-webkit-keyframes glow-text {
           from {
-            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #E2A6FF, 0 0 40px #E2A6FF, 0 0 50px #E2A6FF, 0 0 60px #E2A6FF, 0 0 70px #E2A6FF;
+            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #5a5aff, 0 0 40px #5a5aff, 0 0 50px #5a5aff, 0 0 60px #5a5aff, 0 0 70px #5a5aff;
           }
           to {
-            text-shadow: 0 0 20px #fff, 0 0 30px #E2A6FF, 0 0 40px #E2A6FF, 0 0 50px #E2A6FF, 0 0 60px #E2A6FF, 0 0 70px #E2A6FF, 0 0 80px #E2A6FF;
+            text-shadow: 0 0 20px #fff, 0 0 30px #5a5aff, 0 0 40px #5a5aff, 0 0 50px #5a5aff, 0 0 60px #5a5aff, 0 0 70px #5a5aff, 0 0 80px #5a5aff;
           }
         }
