--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,10 +15,6 @@
             scrollbar-width: none;
             -ms-overflow-style: none;
             overflow-y: scroll;
-	    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.honest.wtf/media/background/bg.svg"); 
-	    background-position: 50% 50%;
-  	    color: #FFFFFF;
-  	    background-color: #000;
           }
           body::-webkit-scrollbar {
             width: 0px;
@@ -86,6 +82,9 @@
         position: fixed;
         top: 0;
         left: 0;
+        background-image: url("https://cdn.honest.wtf/media/background/bg.svg");
+  	    color: #FFFFFF;
+  	    background-color: #000;
         }
 
         .content {
@@ -95,7 +94,6 @@
         bottom: 0;
         min-width: 100%; 
         min-height: 100%;
-        background: rgba(0, 0, 0, 0.3);
         color: #f1f1f1;
         padding: 20px;
         }
